Fixed css to use 100% of screen on mobile phones.

--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,10 @@ header h1 {
 }
 
 @media screen and (max-width: 900px) {
+    section {
+        height: 100%;
+    }
+
     .container {
         width: 90%;
         height: 70vh;
@@ -162,6 +166,7 @@ header h1 {
     section {
         display: flex;
         flex-direction: column;
+        height: 100%;
         min-height: 530px;
     }
     
